# notes

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/: NotesConfig.h.in
src/: Command.cpp  Command.h  NotesConfig.h.in  main.cpp
